# bridgeAI-drift-monitoring

./: Dockerfile  README.md  config.yaml  pyproject.toml
.github/workflows/: release.yml
src/: config.yaml  drift_report.py  generate_report.py  get_data.py  inference.py  main.py  upload_report.py  utils.py
tests/: test_generate_report.py  test_get_data.py  test_inference.py
