[tool.poetry]
name = "bridgeai-drift-monitoring"
version = "0.3.0"
description = ""
authors = ["DC AI Team <opensource@digicatapult.org.uk>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
evidently = "^0.4.36"
pandera = "^0.20.3"
setuptools = "^74.1.1"
dvc = "^3.55.2"
dvc-s3 = "^3.2.0"
gitpython = "^3.1.43"
python-json-logger = "^2.0.7"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 79

[tool.flake8]
max-line-length = 79